[package]
name = "reactive-rs"
version = "0.1.0"
authors = ["Ivan Smirnov <i.s.smirnov@gmail.com>"]
description = "FRP in Rust: streams and broadcasts."
keywords = ["reactive", "frp", "stream", "broadcast"]
documentation = "http://docs.rs/reactive-rs/"
homepage = "https://github.com/aldanor/reactive-rs"
repository = "https://github.com/aldanor/reactive-rs"
readme = "README.md"
license = "MIT"

[badges]
travis-ci = { repository = "aldanor/reactive-rs" }

[dependencies]
slice-deque = { version = "0.1", optional = true }

[dev-dependencies]
slice-deque = "0.1"

[features]
default = ["slice-deque"]
